--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,24 @@
 </head>
 <body>
     <h1>Hello from a static file!</h1>
+    <form action="" id ="item-form">
+        <input type="text" id="item-input" placeholder="Add an item" required>
+        <button type="submit">Add</button>
+    </form>
+
+    <ul id="item-list"></ul>
+    <script>
+            const form = document.getElementById('item-form');
+            const input = document.getElementById('item-input');
+            const list = document.getElementById('item-list');
+
+
+            form.addEventListener('submit', async (e) =>{
+               e.preventDefault();
+               const item = input.value     
+
+            })
+
+    </script>
 </body>
 </html>
