--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,10 @@
 </head>
 <body>
     <h1>Hello from a static file!</h1>
-    <form action="" id ="item-form">
+    <form  id ="item-form">
         <input type="text" id="item-input" placeholder="Add an item" required>
         <button type="submit">Add</button>
     </form>
-
     <ul id="item-list"></ul>
     <script>
             const form = document.getElementById('item-form');
@@ -20,9 +19,27 @@
 
             form.addEventListener('submit', async (e) =>{
                e.preventDefault();
-               const item = input.value     
+               const item = input.value.trim();
+               if (item) {
+                  await fetch('/items',{
+                      method :'POST',
+                      headers: {'Content-Type': 'application/json'},
+                      body: JSON.stringify({ item })  
 
-            })
+                  });
+                  input.value = '';
+                  loadItems();
+               }
+
+            });
+
+            async function loadItems() {
+                const response = await fetch('/items');
+                const items = await response.json();
+                list.innerHTML = items.map(item => `<li>${item}</li>`).join('');
+            }
+
+            loadItems();
 
     </script>
 </body>
